introdução a API Rest

--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -1,5 +1,19 @@
 spring.application.name=api
-
+#endereço do BD
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#login do BD
 spring.datasource.username=postgres
+#Senha do BD
 spring.datasource.password=fic@134
+
+#Schema padrão
+spring.jpa.properties.hibernate.default_schema=ecommerce
+
+#Configuração do Hibernate
+#aqui estamos validando o banco de model com o banco do postgres
+spring.jpa.hibernate.ddl-auto=validate
+
+#essa opção faz o JPA mostrar quais códigos SQL foi usado para execultar a requisição
+spring.jpa.show-sql=true
+#essa opção deixa o SQL mostrado com o comando acima de forma mais legivel
+spring.jpa.properties.hibernate.format_sql=true
