Aualização de properties

--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 #login do BD
 spring.datasource.username=postgres
 #Senha do BD
-spring.datasource.password=fic@134
+spring.datasource.password=senai123
 
 #Schema padrão
 spring.jpa.properties.hibernate.default_schema=ecommerce
